Refactoring integration tests to use RestClient, adding missing test cases, and changing ReservationEntity ID to UUID