@@ -11,11 +11,13 @@ import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestClient;
 
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.catchThrowableOfType;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 class HotelApiIntegrationTest extends TestContainerConfiguration {
@@ -37,6 +39,34 @@ class HotelApiIntegrationTest extends TestContainerConfiguration {
     }
 
     @Test
+    void getHotel() {
+        HotelEntity saved = hotelRepository.save(new HotelEntity("h1", "Hotel One", "New York"));
+
+        ResponseEntity<HotelDto> response = restClient.get()
+                .uri("/" + saved.getId())
+                .retrieve()
+                .toEntity(HotelDto.class);
+
+        assertThat(response.getStatusCode().value()).isEqualTo(200);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getName()).isEqualTo("Hotel One");
+        assertThat(response.getBody().getCity()).isEqualTo("New York");
+    }
+
+    @Test
+    void getHotelNotFound() {
+        HttpClientErrorException exception = catchThrowableOfType(() ->
+                restClient.get()
+                        .uri("/unknown-id")
+                        .retrieve()
+                        .toBodilessEntity(),
+                HttpClientErrorException.class
+        );
+
+        assertThat(exception.getStatusCode().value()).isEqualTo(404);
+    }
+
+    @Test
     void createHotel() {
         HotelDto request = new HotelDto("h1", "Hotel One", "New York", List.of());
 
@@ -46,13 +76,49 @@ class HotelApiIntegrationTest extends TestContainerConfiguration {
                 .retrieve()
                 .toEntity(HotelDto.class);
 
-        assertThat(response.getStatusCodeValue()).isEqualTo(201);
+        assertThat(response.getStatusCode().value()).isEqualTo(201);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody().getName()).isEqualTo("Hotel One");
 
         HotelEntity saved = hotelRepository.findById(response.getBody().getId()).orElseThrow();
         assertThat(saved.getName()).isEqualTo("Hotel One");
         assertThat(saved.getCity()).isEqualTo("New York");
+    }
+
+    @Test
+    void updateHotel() {
+        HotelEntity saved = hotelRepository.save(new HotelEntity("h1", "Hotel One", "New York"));
+
+        HotelDto request = new HotelDto(saved.getId(), "Hotel Updated", "Miami", List.of());
+
+        ResponseEntity<HotelDto> response = restClient.put()
+                .uri("/" + saved.getId())
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(request)
+                .retrieve()
+                .toEntity(HotelDto.class);
+
+        assertThat(response.getStatusCode().value()).isEqualTo(200);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getName()).isEqualTo("Hotel Updated");
+        assertThat(response.getBody().getCity()).isEqualTo("Miami");
+
+        HotelEntity updated = hotelRepository.findById(saved.getId()).orElseThrow();
+        assertThat(updated.getName()).isEqualTo("Hotel Updated");
+        assertThat(updated.getCity()).isEqualTo("Miami");
+    }
+
+    @Test
+    void deleteHotel() {
+        HotelEntity saved = hotelRepository.save(new HotelEntity("h1", "Hotel One", "New York"));
+
+        ResponseEntity<Void> response = restClient.delete()
+                .uri("/" + saved.getId())
+                .retrieve()
+                .toBodilessEntity();
+
+        assertThat(response.getStatusCode().value()).isEqualTo(204);
+        assertThat(hotelRepository.findById(saved.getId())).isEmpty();
     }
 
     @Test
@@ -64,7 +130,7 @@ class HotelApiIntegrationTest extends TestContainerConfiguration {
                 .retrieve()
                 .toEntity(new ParameterizedTypeReference<List<HotelDto>>(){});
 
-        assertThat(response.getStatusCodeValue()).isEqualTo(200);
+        assertThat(response.getStatusCode().value()).isEqualTo(200);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody()).extracting(HotelDto::getName).contains("Hotel 2", "Hotel 3");
     }
@@ -79,10 +145,10 @@ class HotelApiIntegrationTest extends TestContainerConfiguration {
                 .retrieve()
                 .toEntity(new ParameterizedTypeReference<List<HotelDto>>(){});
 
-        assertThat(response.getStatusCodeValue()).isEqualTo(200);
+        assertThat(response.getStatusCode().value()).isEqualTo(200);
         assertThat(response.getBody()).isNotNull();
         assertThat(response.getBody()).hasSize(1);
-        assertThat(response.getBody().get(0).getName()).isEqualTo("Beach Hotel");
-        assertThat(response.getBody().get(0).getCity()).isEqualTo("Miami");
+        assertThat(response.getBody().getFirst().getName()).isEqualTo("Beach Hotel");
+        assertThat(response.getBody().getFirst().getCity()).isEqualTo("Miami");
     }
 }
